Pass test case 1-27
